--- a/HomeAutomationLibrary/HomeAutomationLibrary.csproj
+++ b/HomeAutomationLibrary/HomeAutomationLibrary.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppAction.cs" />
     <Compile Include="Apparat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
